--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,9 @@ services:
     volumes:
       - .:/app
     working_dir: /app
+    networks:
+      - shared_net
 
-
+networks:
+  shared_net:
+    external: true
