--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-shapely
+certifi==2025.4.26
+charset-normalizer==3.4.2
+idna==3.10
+numpy==2.2.6
+psycopg2-binary==2.9.10
+python-dotenv==1.1.0
+requests==2.32.3
+shapely==2.1.1
+urllib3==2.4.0
